# Specular

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TECHNICAL_DECISIONS.md  alembic.ini  docker-compose.yml  note.md  pytest.ini  requirements.txt
.clarify/: overview.md
.claude/commands/: speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.review.md  speckit.specify.md
.specify/config/: isa.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
alembic/: env.py
alembic/versions/: 001_create_users_and_audit_logs.py
app/: exceptions.py
app/core/: config.py  database.py  exceptions.py  logging.py
app/models/: audit_log.py  (+1 more)
backend/: .env.example  .gitignore  Dockerfile  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt  start.ps1  start.sh
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: __init__.py  agents.py  audit.py  llms.py  messages.py  system.py  tools.py  topics.py
backend/app/middleware/: __init__.py  auth.py  logging.py
backend/app/models/: __init__.py  agent.py  error.py
backend/tests/: test_api.py
frontend/: README.md  package-lock.json  package.json  playwright.config.ts
spec/: Agent設置.feature  ChatHistory查詢.feature  LLM查詢.feature  LLM設置.feature  Request記錄.feature  Topic設置.feature  Topic配置檢視.feature  agui_protocal.md  erm.dbml  openapi.yaml  tech_stack.yaml  審計日誌檢視.feature  敏感資料遮罩.feature  日誌過濾與容錯.feature  系統警示.feature  規格書.md
tests/: conftest.py
(+182 files in other folders)
